Fix issue 114 center on tablet gobackstage button text

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -201,6 +201,7 @@ section.digital{
       top: -58px;
       position: relative;
       line-height: 14px;
+      left:1.5px;
       @include fontBaskerville(10px, italic, normal);
     }
   }
